--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
@@ -164,6 +164,16 @@
 			    
 				padding-bottom: 10px;
 			}	
+			#addonOptions-dropdownContainer {
+				width: 100%;
+				
+				display: flex;
+				align-items: center;
+			    text-align: center;
+			    
+			    
+				padding-bottom: 10px;
+			}	
 			
 				#dropdownLabelName {
 					width: 35%;
@@ -175,7 +185,7 @@
 			    	width: 55%;
 			  		margin-left: 60px;
 			  		position: relative;
-			  		z-index: 2;
+			  		z-index: 15;
 				    border: 3px solid black;
 				    background: rgb(255, 187, 153);
 				    color: black;
@@ -186,7 +196,6 @@
 				    width: 300px;
 				    text-align: center;
 				    text-decoration: none;
-				    z-index: 1;
 				    transform: perspective(1000px);
 				    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 				    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
@@ -194,6 +203,7 @@
 				  	font-size: 25px;
 				  	margin-right: 20px;
 			  }
+			  
 			  #selectedOption {
 			    position: relative;
 			    font-weight: bold;
@@ -432,6 +442,13 @@
 				text-align: end; 
 	 		
 	 			
+	 		}
+	 		.dropdownAddonRemove {
+	 			width: 10%;
+				font-size: 35px;
+				margin-right: 60px;
+				text-align: end; 
+	 		
 	 		}
 	 		#removeIngredientText {
 	 			padding-left: 10px;
