html js changed for itempage

--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -85,7 +85,7 @@
    			</div>
    			
    			<div id="add-ons_Extra">
-   			<div id="add-ons_Extra-TitleDiv"><span id="add-ons_Extra-Title">Add-ons (may cost extra)</span></div>
+   			
 	   				
 	   				
 	   				
@@ -105,6 +105,7 @@
 			   					<div id="normal"> <span id="normalText">Normal</span> </div>
 			   					<div id="extra"> <span id="extraText">Extra</span> </div>
 			   			 </div>
+			   			 <div id="toppPriceDiv" class="dropdownToppPrice"> <span id="toppPriceText">$1.00</span> </div>
 			   			 <div id="removeIngredient" class="dropdownAddonRemove"> <span id="removeIngredientText">Remove</span> </div>
 					</div>
    				
@@ -125,7 +126,7 @@
 		   					<div id="rightSide"><span id="rightSideText"></span></div>
 		   				</div>
 	   				
-	   					
+	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
 	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
 	   					
 	   				</div>
@@ -146,7 +147,7 @@
 		   					<div id="rightSide"><span id="rightSideText"></span></div>
 		   				</div>
 	   				
-	   					
+	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
 	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
 	   					
 	   				</div>
@@ -167,7 +168,7 @@
 		   					<div id="rightSide"><span id="rightSideText"></span></div>
 		   				</div>
 	   				
-	   					
+	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
 	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
 	   					
 	   				</div>
@@ -188,7 +189,7 @@
 		   					<div id="rightSide"><span id="rightSideText"></span></div>
 		   				</div>
 	   				
-	   					
+	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
 	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
 	   					
 	   				</div>
@@ -209,7 +210,7 @@
 		   					<div id="rightSide"><span id="rightSideText"></span></div>
 		   				</div>
 	   				
-	   					
+	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
 	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
 	   					
 	   				</div>
