--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
@@ -122,6 +122,7 @@
 				
 				display: flex;
 				flex-direction: column;
+				padding-right: 35px;
 				
 			}
 				#itemName {
@@ -152,6 +153,7 @@
 		
 		#mainOptions {
 			min-height: 350px;
+			padding-right: 28px;
 		}			
 		/* START - mainOptions Dropdown box styles. */	
 			#mainOptions-dropdownContainer {
@@ -435,8 +437,27 @@
 					    cursor: pointer;
 				  	}
 	 		
+	 		
+	 		#toppPriceDiv {
+	 			width: 10%;
+				font-size: 25px;
+				padding-right: 10px;
+				text-align: end; 
+	 		
+	 			
+	 		}
+	 		#toppPriceText {
+	 			padding-left: 10px;
+	 			padding-right: 10px;
+	 			
+	 			border-radius: 5px;
+	 			border: 2px solid black;
+				background-color: rgb(255, 204, 153);
+	 		}
+	 		
+	 		
 	 		#removeIngredient {
-	 			width: 20%;
+	 			width: 10%;
 				font-size: 35px;
 				padding-right: 10px;
 				text-align: end; 
@@ -444,11 +465,14 @@
 	 			
 	 		}
 	 		.dropdownAddonRemove {
-	 			width: 10%;
+	 			width: 15%;
 				font-size: 35px;
-				margin-right: 60px;
+				margin-right: 50px;
 				text-align: end; 
 	 		
+	 		}
+	 		.dropdownToppPrice {
+	 			margin-right: 22px;
 	 		}
 	 		#removeIngredientText {
 	 			padding-left: 10px;
