itemPage javascript changes and additions

--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -105,94 +105,12 @@
 			   					<div id="normal"> <span id="normalText">Normal</span> </div>
 			   					<div id="extra"> <span id="extraText">Extra</span> </div>
 			   			 </div>
+			   			 <div id="toppPricesHidden" style="display:none"> <span id="hiddenAddonPrice">1.00</span> <span id="hiddenExtraPrice">0.50</span> </div>
 			   			 <div id="toppPriceDiv" class="dropdownToppPrice"> <span id="toppPriceText">$1.00</span> </div>
 			   			 <div id="removeIngredient" class="dropdownAddonRemove"> <span id="removeIngredientText">Remove</span> </div>
 					</div>
    				
 	   				
-	   				<div id="lightNormalExtra">
-	   				
-	   					<div id="ingredientName">Ham: </div>
-	   					
-	   					<div id="amountDiv">
-		   					<div id="light"> <span id="lightText">Light</span> </div>
-		   					<div id="normal"> <span id="normalText">Normal</span> </div>
-		   					<div id="extra"> <span id="extraText">Extra</span> </div>
-		   				</div>
-	   					
-	   					<div id="sideOfPizzaDiv">
-		   					<div id="leftSide"><span id="leftSideText"></span></div>
-		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
-		   					<div id="rightSide"><span id="rightSideText"></span></div>
-		   				</div>
-	   				
-	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
-	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
-	   					
-	   				</div>
-	   				
-	   				<div id="lightNormalExtra">
-	   				
-	   					<div id="ingredientName">Pineapple: </div>
-	   					
-	   					<div id="amountDiv">
-		   					<div id="light"> <span id="lightText">Light</span> </div>
-		   					<div id="normal"> <span id="normalText">Normal</span> </div>
-		   					<div id="extra"> <span id="extraText">Extra</span> </div>
-		   				</div>
-	   					
-	   					<div id="sideOfPizzaDiv">
-		   					<div id="leftSide"><span id="leftSideText"></span></div>
-		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
-		   					<div id="rightSide"><span id="rightSideText"></span></div>
-		   				</div>
-	   				
-	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
-	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
-	   					
-	   				</div>
-	   				
-	   				<div id="lightNormalExtra">
-	   				
-	   					<div id="ingredientName">Bacon: </div>
-	   					
-	   					<div id="amountDiv">
-		   					<div id="light"> <span id="lightText">Light</span> </div>
-		   					<div id="normal"> <span id="normalText">Normal</span> </div>
-		   					<div id="extra"> <span id="extraText">Extra</span> </div>
-		   				</div>
-	   					
-	   					<div id="sideOfPizzaDiv">
-		   					<div id="leftSide"><span id="leftSideText"></span></div>
-		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
-		   					<div id="rightSide"><span id="rightSideText"></span></div>
-		   				</div>
-	   				
-	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
-	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
-	   					
-	   				</div>
-	   				
-	   				<div id="lightNormalExtra">
-	   				
-	   					<div id="ingredientName">Sausage: </div>
-	   					
-	   					<div id="amountDiv">
-		   					<div id="light"> <span id="lightText">Light</span> </div>
-		   					<div id="normal"> <span id="normalText">Normal</span> </div>
-		   					<div id="extra"> <span id="extraText">Extra</span> </div>
-		   				</div>
-	   					
-	   					<div id="sideOfPizzaDiv">
-		   					<div id="leftSide"><span id="leftSideText"></span></div>
-		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
-		   					<div id="rightSide"><span id="rightSideText"></span></div>
-		   				</div>
-	   				
-	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
-	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
-	   					
-	   				</div>
 	   				
 	   				<div id="lightNormalExtra">
 	   				
@@ -209,7 +127,7 @@
 		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
 		   					<div id="rightSide"><span id="rightSideText"></span></div>
 		   				</div>
-	   				
+	   					<div id="toppPricesHidden" style="display:none"> <span id="addonPrice">1.00</span> <span id="extraPrice">0.50</span> </div>
 	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
 	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
 	   					
@@ -255,6 +173,7 @@
 	<script src="/javaScript/itemPage/updateSelectedOption-itemPage.js"></script>
 	<script src="/javaScript/itemPage/selectedOptions-itemPage.js"></script>
 	<script src="/javaScript/itemPage/removeSelectedOption-itemPage.js"></script>
+	<script src="/javaScript/itemPage/updateToppingCosts.js"></script>
 	<script src="/javaScript/itemPage/insertMainToppingInfo.js"></script>
 	<script src="/javaScript/itemPage/insertAdditionalToppingInfo.js"></script>
 	
